# weather_fc

./: .gitignore  README.md  render.yaml
.github/workflows/: refresh.yml
backend/: .env  .env.example  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_prices_table.py  0002_create_indicator_observations_table.py  0003_create_outage_notifications_table.py
backend/src/backend/: main.py
backend/src/backend/api/: deps.py
backend/src/backend/api/routes/: indicators.py  internal.py  outages.py  prices.py  sources.py
backend/src/backend/core/: config.py  logging.py  refresh_jobs.py  scheduler.py
backend/src/backend/db/: base.py  models.py  session.py
backend/src/backend/services/: indicator_discovery.py  outage_discovery.py  price_discovery.py  storage.py
backend/tests/: test_health.py
data-services/elexon-retriever/: .env  .env.example  README.md  pyproject.toml
data-services/elexon-retriever/src/elexon_retriever/: __init__.py  client.py  config.py  exceptions.py  models.py
data-services/elexon-retriever/tests/: test_client.py
data-services/entsoe-retriever/: .env  .env.example  README.md  pyproject.toml
data-services/entsoe-retriever/src/entsoe_retriever/: __init__.py  cache.py  client.py  config.py  exceptions.py  models.py
data-services/entsoe-retriever/tests/: test_client.py
data-services/esios-retriever/: .env  README.md  pyproject.toml
data-services/esios-retriever/src/esios_retriever/: __init__.py  client.py  config.py  exceptions.py  models.py
data-services/esios-retriever/tests/: test_client.py
docs/: architecture.md  build.md  deployment.md  postgres-setup.md
frontend/: .env  .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AppShell.tsx
frontend/src/features/dashboard/: DashboardPage.tsx  GenerationStackChart.tsx  OutagesPanel.tsx  SourceFilter.tsx  areas.ts  formatTimestamp.ts  palette.ts
scripts/: bootstrap.ps1  bootstrap.sh  db-setup.ps1  db-setup.sh  dev.bat  dev.ps1  dev.sh
