[project]
name = "esios-retriever"
version = "0.1.0"
description = "Async client and local cache for the ESIOS (Red Eléctrica de España) public REST API — Spanish power market indicators."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "polars>=1.12",
    "duckdb>=1.1",
    "pyarrow>=17.0",  # duckdb's .pl() (used by ParquetCache reads) needs this at runtime
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/esios_retriever"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
